--- a/src/styles/favorite.module.css
+++ b/src/styles/favorite.module.css
@@ -52,6 +52,7 @@ ul {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  width: fit-content;
 }
 .warning {
   color: red;
